# sdkwork-forum

./: .env.postgres.example  AGENTS.md  Cargo.toml  README.md  package.json  pnpm-workspace.yaml  sdkwork.app.config.json  start-server.bat  vitest.setup.ts
.sdkwork/: README.md
.sdkwork/plugins/: README.md
.sdkwork/skills/: README.md
apis/app-api/forum/: openapi.yaml
apps/: README.md
apps/sdkwork-forum-h5/: README.md  index.html  package-lock.json  package.json  sdkwork.app.config.json  tsconfig.json  vite.config.ts
apps/sdkwork-forum-pc/: README.md  package.json  sdkwork.app.config.json
configs/: sdkwork-api-cloud-gateway.forum.development.toml  sdkwork-api-cloud-gateway.forum.production.toml
configs/local/: .env.example
configs/production/: .env.production.example
configs/test/: README.md
configs/topology/: cloud.development.env  cloud.production.env  cloud.split-services.development.env  cloud.split-services.production.env  standalone.development.env  standalone.production.env  standalone.split-services.development.env  standalone.unified-process.development.env  standalone.unified-process.production.env
crates/sdkwork-api-forum-assembly/: Cargo.toml  assembly-manifest.json
crates/sdkwork-api-forum-assembly/specs/: README.md  component.spec.json
crates/sdkwork-api-forum-assembly/src/: bootstrap.rs  generated.rs  lib.rs
crates/sdkwork-api-forum-standalone-gateway/: Cargo.toml
crates/sdkwork-api-forum-standalone-gateway/specs/: README.md  component.spec.json
crates/sdkwork-api-forum-standalone-gateway/src/: context.rs  lib.rs  main.rs
crates/sdkwork-api-forum-standalone-gateway/src/routes/: app.rs  backend.rs  mod.rs  open.rs
crates/sdkwork-communication-forum-repository-sqlx/: Cargo.toml  README.md
crates/sdkwork-communication-forum-repository-sqlx/specs/: README.md  component.spec.json
crates/sdkwork-communication-forum-repository-sqlx/src/: bootstrap.rs  lib.rs  repo_impl.rs  schema.rs
crates/sdkwork-communication-forum-service/: Cargo.toml  README.md
crates/sdkwork-communication-forum-worker/: Cargo.toml  README.md
crates/sdkwork-forum-api-server/: Cargo.toml
crates/sdkwork-forum-api-server/specs/: README.md  component.spec.json
crates/sdkwork-forum-api-server/src/: context.rs  dto.rs  handlers.rs  lib.rs  main.rs  middleware.rs
crates/sdkwork-forum-api-server/src/routes/: open.rs
crates/sdkwork-forum-database-host/: Cargo.toml
crates/sdkwork-forum-database-host/src/: lib.rs
crates/sdkwork-forum-gateway-assembly/: Cargo.toml  assembly-manifest.json
crates/sdkwork-forum-gateway-assembly/src/: bootstrap.rs  generated.rs  lib.rs
crates/sdkwork-forum-http-support/: Cargo.toml
crates/sdkwork-forum-http-support/specs/: README.md  component.spec.json
crates/sdkwork-forum-http-support/src/: context.rs  iam.rs  lib.rs
crates/sdkwork-forum-service-host/: Cargo.toml  README.md
crates/sdkwork-forum-service-host/specs/: README.md  component.spec.json
crates/sdkwork-forum-service-host/src/: lib.rs  ports.rs
crates/sdkwork-forum-standalone-gateway/: Cargo.toml  README.md
crates/sdkwork-forum-standalone-gateway/specs/: README.md  component.spec.json
crates/sdkwork-forum-standalone-gateway/src/: iam.rs  infra_router.rs  lib.rs  main.rs
crates/sdkwork-forum-standalone-gateway/src/routes/: app.rs  backend.rs
crates/sdkwork-router-forum-app-api/: Cargo.toml  README.md
crates/sdkwork-router-forum-backend-api/: Cargo.toml
crates/sdkwork-router-forum-open-api/: Cargo.toml
crates/sdkwork-router-forum-open-api/specs/: README.md  component.spec.json
crates/sdkwork-router-forum-open-api/src/: lib.rs  manifest.rs  web_bootstrap.rs
crates/sdkwork-router-forum-open-api/tests/: open_route_manifest.rs
crates/sdkwork-routes-forum-app-api/: Cargo.toml  README.md
crates/sdkwork-routes-forum-backend-api/: Cargo.toml  README.md
crates/sdkwork-routes-forum-backend-api/specs/: README.md  component.spec.json
crates/sdkwork-routes-forum-backend-api/src/: handlers.rs  lib.rs  manifest.rs  paths.rs  routes.rs  runtime.rs
crates/sdkwork-routes-forum-backend-api/src/mapper/: request.rs
crates/sdkwork-routes-forum-open-api/: Cargo.toml  README.md
crates/sdkwork-routes-forum-open-api/specs/: README.md  component.spec.json
crates/sdkwork-routes-forum-open-api/src/: error.rs  handlers.rs  http_route_manifest.rs  lib.rs  manifest.rs  paths.rs  routes.rs  runtime.rs  web_bootstrap.rs
crates/sdkwork-routes-forum-open-api/src/mapper/: problem.rs  request.rs  response.rs
crates/sdkwork-routes-forum-open-api/tests/: open_route_manifest.rs
database/: README.md  database.manifest.json
database/contract/: prefix-registry.json  schema.yaml  table-registry.json
database/seeds/: seed.manifest.json
deployments/docker/: Dockerfile.server  Dockerfile.worker  docker-compose.yml
deployments/sql/: README.md  forum-ddl-postgresql.sql
docs/: INDEX.yaml  README.md  forum-api-design.md  forum-architecture.md  forum-database-design.md  forum-integration-roadmap.md  implementation-plan.md
docs/adr/: ADR-0001-forum-topic-reply-naming.md
docs/changelogs/: README.md  v0.1.0-foundation.md
docs/runbooks/: forum-moderation-runbook.md
etc/: sdkwork-api-cloud-gateway.forum.development.toml  sdkwork-api-cloud-gateway.forum.production.toml
examples/: README.md
jobs/: README.md
jobs/batches/: forum-reindex.batch.yaml
jobs/queues/: forum-worker.queues.yaml
jobs/runbooks/: README.md
jobs/schedules/: forum-maintenance.schedule.yaml
plugins/: README.md
sdks/: README.md
sdks/sdkwork-forum-app-sdk/: .sdkwork-assembly.json  README.md  sdk-manifest.json
sdks/sdkwork-forum-backend-sdk/: .sdkwork-assembly.json  README.md  sdk-manifest.json
sdks/sdkwork-forum-sdk/: .sdkwork-assembly.json  README.md  sdk-manifest.json
specs/: README.md  component.spec.json  forum-database.schema.yaml  iam.module.manifest.json  topology.spec.json
tests/contract/: README.md  forum-contract.test.mjs
tests/schema/: README.md  forum-schema.test.mjs
tests/sdk/: forum-sdk.test.mjs
tests/static/: forum-contract-boundary.test.mjs
(+115 files in other folders)
