[workspace]
resolver = "2"
members = [
  "crates/sdkwork-communication-forum-service",
  "crates/sdkwork-communication-forum-repository-sqlx",
  "crates/sdkwork-router-forum-app-api",
  "crates/sdkwork-router-forum-backend-api",
  "crates/sdkwork-router-forum-open-api",
  "crates/sdkwork-forum-api-server",
  "crates/sdkwork-forum-service-host",
  "crates/sdkwork-communication-forum-worker"
]

[workspace.package]
edition = "2021"
version = "0.1.0"
license = "UNLICENSED"
publish = false

[workspace.dependencies]
axum = "0.7"
axum-extra = "0.9"
tokio = { version = "1", features = ["full"] }
sqlx = { version = "0.8", features = ["runtime-tokio", "postgres", "chrono", "uuid"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
uuid = { version = "1", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }
tower = "0.4"
tower-http = { version = "0.5", features = ["cors", "trace"] }
tracing = "0.1"
tracing-subscriber = "0.3"
anyhow = "1"
thiserror = "1"
