[package]
name = "sdkwork-api-forum-standalone-gateway"
version.workspace = true
edition.workspace = true
license.workspace = true
publish.workspace = true

[[bin]]
name = "sdkwork-api-forum-standalone-gateway"
path = "src/main.rs"

[dependencies]
sdkwork_api_forum_assembly = { package = "sdkwork-api-forum-assembly", path = "../sdkwork-api-forum-assembly" }
sdkwork-database-ops-http = { workspace = true }
axum = { workspace = true }
tokio = { workspace = true }
tower-http = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
sdkwork-web-bootstrap = { workspace = true }

[lib]
path = "src/lib.rs"
