[package]
name = "sdkwork-communication-forum-repository-sqlx"
version.workspace = true
edition.workspace = true
license.workspace = true
publish.workspace = true

[dependencies]
sdkwork-communication-forum-service = { path = "../sdkwork-communication-forum-service" }
sdkwork-id-core = { workspace = true }
sqlx = { workspace = true, features = ["runtime-tokio", "postgres", "json", "bigdecimal"] }
serde = { workspace = true }
serde_json = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
md-5 = "0.10"
digest = "0.10"
tokio = { workspace = true }

[lib]
path = "src/lib.rs"
