[package]
name = "sdkwork-forum-api-server"
version.workspace = true
edition.workspace = true
license.workspace = true
publish.workspace = true

[dependencies]
sdkwork-router-forum-app-api = { path = "../sdkwork-router-forum-app-api" }
sdkwork-router-forum-backend-api = { path = "../sdkwork-router-forum-backend-api" }
sdkwork-router-forum-open-api = { path = "../sdkwork-router-forum-open-api" }
sdkwork-forum-service-host = { path = "../sdkwork-forum-service-host" }
sdkwork-communication-forum-service = { path = "../sdkwork-communication-forum-service" }
axum = { workspace = true }
tokio = { workspace = true }
tower = { workspace = true }
tower-http = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }

[lib]
path = "src/lib.rs"

[[bin]]
name = "forum-server"
path = "src/main.rs"
