[package]
name = "sdkwork-forum-api-server"
version.workspace = true
edition.workspace = true
license.workspace = true
publish.workspace = true

[dependencies]
sdkwork_forum_gateway_assembly = { package = "sdkwork-forum-gateway-assembly", path = "../sdkwork-forum-gateway-assembly" }
sdkwork-routes-forum-app-api = { path = "../sdkwork-routes-forum-app-api" }
sdkwork-routes-forum-backend-api = { path = "../sdkwork-routes-forum-backend-api" }
sdkwork-routes-forum-open-api = { path = "../sdkwork-routes-forum-open-api" }
sdkwork-forum-service-host = { path = "../sdkwork-forum-service-host" }
sdkwork-communication-forum-service = { path = "../sdkwork-communication-forum-service" }
sdkwork-iam-web-adapter = { path = "../../../sdkwork-iam/crates/sdkwork-iam-web-adapter" }
sdkwork-iam-context-service = { path = "../../../sdkwork-iam/crates/sdkwork-iam-context-service" }
sdkwork-database-ops-http = { path = "../../../sdkwork-database/crates/sdkwork-database-ops-http" }
axum = { workspace = true }
tokio = { workspace = true }
tower = { workspace = true }
tower-http = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
base64 = "0.22"
sdkwork-web-bootstrap = { workspace = true }

[lib]
path = "src/lib.rs"

[[bin]]
name = "forum-server"
path = "src/main.rs"

[[bin]]
name = "sdkwork-forum-standalone-gateway"
path = "src/main.rs"
