[package]
name = "sdkwork-forum-gateway-assembly"
edition.workspace = true
license.workspace = true
version.workspace = true
description = "Generated gateway assembly for sdkwork-forum application HTTP plane."

[lib]
name = "sdkwork_forum_gateway_assembly"
path = "src/lib.rs"

[dependencies]
axum.workspace = true
tokio = { version = "1.48", features = ["macros", "rt-multi-thread"] }
sdkwork_routes_forum_app_api = { package = "sdkwork-routes-forum-app-api", path = "../sdkwork-routes-forum-app-api" }
sdkwork_routes_forum_backend_api = { package = "sdkwork-routes-forum-backend-api", path = "../sdkwork-routes-forum-backend-api" }
sdkwork_routes_forum_open_api = { package = "sdkwork-routes-forum-open-api", path = "../sdkwork-routes-forum-open-api" }
