[package]
name = "sdkwork-forum-http-support"
version.workspace = true
edition.workspace = true
license.workspace = true
publish.workspace = true

[dependencies]
axum.workspace = true
base64 = "0.22"
serde.workspace = true
serde_json.workspace = true
sdkwork-communication-forum-service = { path = "../sdkwork-communication-forum-service" }
sdkwork-forum-service-host = { path = "../sdkwork-forum-service-host" }
sdkwork-iam-context-service.workspace = true
sdkwork-iam-web-adapter.workspace = true
