[package]
name = "sdkwork-forum-service-host"
version.workspace = true
edition.workspace = true
license.workspace = true
publish.workspace = true

[dependencies]
sdkwork-communication-forum-repository-sqlx = { path = "../sdkwork-communication-forum-repository-sqlx" }
sdkwork-communication-forum-service = { path = "../sdkwork-communication-forum-service" }
sdkwork-pool-config = { path = "../../../sdkwork-pool/crates/sdkwork-pool-config" }
sdkwork-pool-sqlx = { path = "../../../sdkwork-pool/crates/sdkwork-pool-sqlx" }
sqlx = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
dotenvy = "0.15"

[lib]
path = "src/lib.rs"
