[package]
name = "sdkwork-forum-standalone-gateway"
version.workspace = true
edition.workspace = true
license.workspace = true
publish.workspace = true

[[bin]]
name = "sdkwork-forum-standalone-gateway"
path = "src/main.rs"

[dependencies]
sdkwork_forum_gateway_assembly = { package = "sdkwork-forum-gateway-assembly", path = "../sdkwork-forum-gateway-assembly" }
sdkwork-forum-service-host = { path = "../sdkwork-forum-service-host" }
sdkwork-communication-forum-service = { path = "../sdkwork-communication-forum-service" }
sdkwork-iam-web-adapter = { workspace = true }
sdkwork-iam-context-service = { workspace = true }
sdkwork-database-ops-http = { workspace = true }
axum = { workspace = true }
tokio = { workspace = true }
tower = { workspace = true }
tower-http = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
base64 = "0.22"
sdkwork-web-bootstrap = { workspace = true }

[lib]
path = "src/lib.rs"

