[package]
name = "sdkwork-routes-forum-backend-api"
version.workspace = true
edition.workspace = true
license.workspace = true
publish.workspace = true

[lib]
path = "src/lib.rs"

[dependencies]
axum.workspace = true
serde.workspace = true
serde_json.workspace = true
sdkwork-communication-forum-service = { path = "../sdkwork-communication-forum-service" }
sdkwork-forum-http-support.workspace = true
