[package]
name = "sdkwork-routes-forum-open-api"
version.workspace = true
edition.workspace = true
license.workspace = true
publish.workspace = true

[lib]
path = "src/lib.rs"

[dependencies]
sdkwork-web-core = { workspace = true }
axum = { version = "0.8", default-features = false, features = ["json"] }
sdkwork-iam-web-adapter = { workspace = true }
sdkwork-web-axum = { workspace = true }
sdkwork-web-bootstrap = { workspace = true }

[dev-dependencies]
sdkwork-web-core = { workspace = true }
