[package]
name = "sdkwork-routes-forum-open-api"
version.workspace = true
edition.workspace = true
license.workspace = true
publish.workspace = true

[lib]
path = "src/lib.rs"

[dependencies]
sdkwork-web-core = { workspace = true }
axum.workspace = true
serde.workspace = true
serde_json.workspace = true
sdkwork-communication-forum-service = { path = "../sdkwork-communication-forum-service" }
sdkwork-forum-http-support.workspace = true
sdkwork-iam-web-adapter = { workspace = true }
sdkwork-web-axum = { workspace = true }
sdkwork-web-bootstrap = { workspace = true }

[dev-dependencies]
sdkwork-web-core = { workspace = true }
